# Corewar

./: .gitignore  Invalid codage octal
asm/: .cor  Makefile  asm
asm/champs/: Backward.s  Car.cor  lde.cor  lde.s  test.s
asm/champs/examples/: bee_gees.s  zork.cor  zork.s
asm/inc/: asm.h  op.h
asm/libftprintf/: Makefile
asm/libftprintf/inc/: ft_handle_specifier.h  ft_helpers.h  ft_lengths.h  ft_printf.h  ft_string_from_num.h  libft.h  printf_structs.h
asm/libftprintf/src/ft_helpers/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_max_in_array.c  ft_pow.c  ft_read_from_fd.c  ft_sort_int.c  ft_sqrt.c  ft_tolower.c  ft_toupper.c  get_next_line.c
asm/libftprintf/src/ft_lst/: ft_lst_size.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
asm/libftprintf/src/ft_mem/: ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
asm/libftprintf/src/ft_printf/: ft_array_of_specifiers.c  ft_handle_flag_length.c  ft_handle_flags.c  ft_helpers.c  ft_printf.c  ft_string_from_num.c  ft_write_string.c
asm/libftprintf/src/ft_printf/ft_length/: ft_length_h.c  ft_length_hh.c  ft_length_j.c  ft_length_l.c  ft_length_ll.c  ft_length_none.c  ft_length_none_numbers.c  ft_length_z.c
asm/libftprintf/src/ft_put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
asm/libftprintf/src/ft_str/: ft_str_to_upper.c  ft_str_tolower.c  ft_str_unsigned_concat.c  ft_str_unsigned_del.c  ft_str_unsigned_new.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strconcat.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strdup_until.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
asm/src/: add_dir_or_indir.c  add_operation.c  count_operation_size.c  ft_handle_errors.c  ft_parse_operations.c  ft_split_line.c  main.c  make_code.c  make_header.c  op.c  parse_line.c
corewar_vm/: CMakeLists.txt  Makefile  main.c
corewar_vm/includes/: corewar_vm.h  debug.h  vm_errors.h
corewar_vm/libft/: .gitignore  CMakeLists.txt  Makefile
corewar_vm/libft/inc/: btree.h  ctype.h  ft_math.h  get_next_line.h  libft.h  lists.h  mem.h  num.h  printers.h  queue.h  stack.h  str.h
corewar_vm/libft/inc/ft_printf/: colors.h  ft_printf.h  ft_printf_parsers.h  ft_printf_printers.h  ft_printf_structs.h  ft_printf_utils.h
corewar_vm/libft/src/btree/: btree_create_node.c  btree_del.c  btree_delone.c  btree_dfs_inorder.c  btree_dfs_postorder.c  btree_dfs_preorder.c  btree_insert_data.c  btree_level_count.c  btree_print.c  btree_search_data.c
corewar_vm/libft/src/ctype/: ft_is_empty.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
corewar_vm/libft/src/ft_printf/: fpf_manage_char.c  fpf_manage_number.c  fpf_manage_string.c  ft_printf.c  ft_printf_core.c  ft_printf_parsers.c  ft_printf_printers.c  ft_printf_utils.c
corewar_vm/libft/src/get_next_line/: get_next_line.c
corewar_vm/libft/src/lists/: ft_list_at.c  ft_list_last.c  ft_list_merge.c  ft_list_push_back.c  ft_list_push_front.c  ft_list_remove_if.c  ft_list_size.c  ft_list_sort.c  ft_lst_del_content.c  ft_lst_find.c  ft_lst_foreach.c  ft_lst_print.c  ft_lst_reverse.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_sorted_list_insert.c  ft_sorted_list_merge.c
corewar_vm/libft/src/math/: factorial.c  ft_pow.c
corewar_vm/libft/src/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memjoin.c  ft_memmove.c  ft_memset.c  ft_realloc.c
corewar_vm/libft/src/num/: ft_atoi.c  ft_atoi_base.c  ft_count_words.c  ft_in_base.c  ft_itoa.c  ft_itoa_base.c  ft_numlen.c  ft_strtol.c
corewar_vm/libft/src/printers/: ft_perror.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
corewar_vm/libft/src/queque/: create_queue.c  del_queue.c  dequeue.c  enqueue.c  print_queue.c
corewar_vm/libft/src/stack/: stack_peek.c  stack_pop.c  stack_push.c  stack_size.c
corewar_vm/libft/src/str/: ft_is_numeric.c  ft_str_count_occur.c  ft_str_toupper.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
corewar_vm/op/: op.c  op.h
corewar_vm/sources/: check.c  corewar.c  corewar_args.c  corewar_options.c  debug.c  introduce.c  memory_free.c  player.c  process_list.c  terminate_vm.c  utils.c  validate_player.c  vm_cycle.c  winner.c
corewar_vm/sources/commands/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
corewar_vm/sources/commands/utils/: op_args.c  op_argtypes.c  op_utils.c
corewar_vm/vm_champs/champs/: tdc2.s  tdc3.s
corewar_vm/vm_champs/champs/examples/: bee_gees.ann  bigzork.ann  fluttershy.ann  helltrain.ann  turtle.ann  zork.ann
