cmake_minimum_required(VERSION 3.13)
project(corewar_vm C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/inc)
include_directories(libft/inc/ft_printf)
include_directories(op)

add_executable(corewar_vm
        includes/corewar_vm.h
        includes/debug.h
        includes/vm_errors.h
        libft/src/str/ft_is_numeric.c
        libft/inc/ft_printf/colors.h
        libft/inc/ft_printf/ft_printf.h
        libft/inc/ft_printf/ft_printf_parsers.h
        libft/inc/ft_printf/ft_printf_printers.h
        libft/inc/ft_printf/ft_printf_structs.h
        libft/inc/ft_printf/ft_printf_utils.h
        libft/inc/btree.h
        libft/inc/ctype.h
        libft/inc/ft_math.h
        libft/inc/get_next_line.h
        libft/inc/libft.h
        libft/inc/lists.h
        libft/inc/mem.h
        libft/inc/num.h
        libft/inc/printers.h
        libft/inc/queue.h
        libft/inc/stack.h
        libft/inc/str.h
        libft/src/btree/btree_create_node.c
        libft/src/btree/btree_del.c
        libft/src/btree/btree_delone.c
        libft/src/btree/btree_dfs_inorder.c
        libft/src/btree/btree_dfs_postorder.c
        libft/src/btree/btree_dfs_preorder.c
        libft/src/btree/btree_insert_data.c
        libft/src/btree/btree_level_count.c
        libft/src/btree/btree_print.c
        libft/src/btree/btree_search_data.c
        libft/src/ctype/ft_is_empty.c
        libft/src/ctype/ft_isalnum.c
        libft/src/ctype/ft_isalpha.c
        libft/src/ctype/ft_isascii.c
        libft/src/ctype/ft_isdigit.c
        libft/src/ctype/ft_isprint.c
        libft/src/ctype/ft_tolower.c
        libft/src/ctype/ft_toupper.c
        libft/src/ft_printf/fpf_manage_char.c
        libft/src/ft_printf/fpf_manage_number.c
        libft/src/ft_printf/fpf_manage_string.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/ft_printf_core.c
        libft/src/ft_printf/ft_printf_parsers.c
        libft/src/ft_printf/ft_printf_printers.c
        libft/src/ft_printf/ft_printf_utils.c
        libft/src/get_next_line/get_next_line.c
        libft/src/lists/ft_list_at.c
        libft/src/lists/ft_list_last.c
        libft/src/lists/ft_list_merge.c
        libft/src/lists/ft_list_push_back.c
        libft/src/lists/ft_list_push_front.c
        libft/src/lists/ft_list_remove_if.c
        libft/src/lists/ft_list_size.c
        libft/src/lists/ft_list_sort.c
        libft/src/lists/ft_lst_del_content.c
        libft/src/lists/ft_lst_find.c
        libft/src/lists/ft_lst_foreach.c
        libft/src/lists/ft_lst_print.c
        libft/src/lists/ft_lst_reverse.c
        libft/src/lists/ft_lstadd.c
        libft/src/lists/ft_lstdel.c
        libft/src/lists/ft_lstdelone.c
        libft/src/lists/ft_lstiter.c
        libft/src/lists/ft_lstmap.c
        libft/src/lists/ft_lstnew.c
        libft/src/lists/ft_sorted_list_insert.c
        libft/src/lists/ft_sorted_list_merge.c
        libft/src/math/factorial.c
        libft/src/math/ft_pow.c
        libft/src/mem/ft_bzero.c
        libft/src/mem/ft_memalloc.c
        libft/src/mem/ft_memccpy.c
        libft/src/mem/ft_memchr.c
        libft/src/mem/ft_memcmp.c
        libft/src/mem/ft_memcpy.c
        libft/src/mem/ft_memdel.c
        libft/src/mem/ft_memjoin.c
        libft/src/mem/ft_memmove.c
        libft/src/mem/ft_memset.c
        libft/src/mem/ft_realloc.c
        libft/src/num/ft_atoi.c
        libft/src/num/ft_atoi_base.c
        libft/src/num/ft_count_words.c
        libft/src/num/ft_in_base.c
        libft/src/num/ft_itoa.c
        libft/src/num/ft_itoa_base.c
        libft/src/num/ft_numlen.c
        libft/src/num/ft_strtol.c
        libft/src/printers/ft_perror.c
        libft/src/printers/ft_putchar.c
        libft/src/printers/ft_putchar_fd.c
        libft/src/printers/ft_putendl.c
        libft/src/printers/ft_putendl_fd.c
        libft/src/printers/ft_putnbr.c
        libft/src/printers/ft_putnbr_fd.c
        libft/src/printers/ft_putstr.c
        libft/src/printers/ft_putstr_fd.c
        libft/src/queque/create_queue.c
        libft/src/queque/del_queue.c
        libft/src/queque/dequeue.c
        libft/src/queque/enqueue.c
        libft/src/queque/print_queue.c
        libft/src/stack/stack_peek.c
        libft/src/stack/stack_pop.c
        libft/src/stack/stack_push.c
        libft/src/stack/stack_size.c
        libft/src/str/ft_str_count_occur.c
        libft/src/str/ft_str_toupper.c
        libft/src/str/ft_strcat.c
        libft/src/str/ft_strchr.c
        libft/src/str/ft_strclr.c
        libft/src/str/ft_strcmp.c
        libft/src/str/ft_strcpy.c
        libft/src/str/ft_strdel.c
        libft/src/str/ft_strdup.c
        libft/src/str/ft_strequ.c
        libft/src/str/ft_striter.c
        libft/src/str/ft_striteri.c
        libft/src/str/ft_strjoin.c
        libft/src/str/ft_strjoin_free.c
        libft/src/str/ft_strlcat.c
        libft/src/str/ft_strlen.c
        libft/src/str/ft_strmap.c
        libft/src/str/ft_strmapi.c
        libft/src/str/ft_strncat.c
        libft/src/str/ft_strncmp.c
        libft/src/str/ft_strncpy.c
        libft/src/str/ft_strndup.c
        libft/src/str/ft_strnequ.c
        libft/src/str/ft_strnew.c
        libft/src/str/ft_strnstr.c
        libft/src/str/ft_strrchr.c
        libft/src/str/ft_strrev.c
        libft/src/str/ft_strsplit.c
        libft/src/str/ft_strstr.c
        libft/src/str/ft_strsub.c
        libft/src/str/ft_strtrim.c
        op/op.c
        op/op.h
        sources/commands/utils/op_args.c
        sources/commands/utils/op_argtypes.c
        sources/commands/utils/op_utils.c
        sources/commands/add.c
        sources/commands/aff.c
        sources/commands/and.c
        sources/commands/fork.c
        sources/commands/ld.c
        sources/commands/ldi.c
        sources/commands/lfork.c
        sources/commands/live.c
        sources/commands/lld.c
        sources/commands/lldi.c
        sources/commands/or.c
        sources/commands/st.c
        sources/commands/sti.c
        sources/commands/sub.c
        sources/commands/xor.c
        sources/commands/zjmp.c
        sources/corewar.c
        sources/corewar_args.c
        sources/corewar_options.c
        sources/debug.c
        sources/memory_free.c
        sources/player.c
        sources/process_list.c
        sources/terminate_vm.c
        sources/utils.c
        sources/validate_player.c
        main.c sources/check.c sources/vm_cycle.c sources/introduce.c sources/winner.c)
